--- a/views/mypostcontainer.ejs
+++ b/views/mypostcontainer.ejs
@@ -1,4 +1,4 @@
-<div class='my-posts-container'>
+<div class='my-posts-container containerss '>
     <div>
          <%-include('friends.ejs',{friend:postobj.username});%> 
     </div>
