--- a/views/header.ejs
+++ b/views/header.ejs
@@ -1,4 +1,9 @@
-
+<%var profilelink = '/'+username+'/profile',
+	explorelink='/'+username+'/explore/friends',
+	homelink='/'+username+'/home',
+	messagelink='/'+username+'/messages',
+	settingslink='/'+username+'/settings';
+ %>
 <div class="headermenu">
 		<div id ='wrapper'>
 			<div class="logo">
@@ -13,12 +18,17 @@
 			</div>
 			<div>
 					<div id="wrapper" style="width:auto;">
+						<%if(username){%>
 					<ul>
-						<li><a href="/home"><div style="font-size:18px;">home</div></a></li>
-						<li><a href="/profile"><div style="font-size:18px;">profile</div></a></li>
-						<li><a href="/logout"><div style="font-size:18px;">logout</div></a></li>
-						<li><a href="/settings"><div style="font-size:18px;">settings</div></a></li>
+						<li><a href=<%=homelink%>><div style="font-size:18px;">feed</div></a></li>
+						<li><a href=<%=explorelink%>><div style="font-size:18px;">explore</div></a></li>
+						<li><a href=<%=profilelink%>><div style="font-size:18px;">profile</div></a></li>
+						<li><a href=<%=messagelink%>><div style="font-size:18px;">messages</div></a></li>
+						<li><a href=<%=settingslink%>><div style="font-size:18px;">settings</div></a></li>
+						
+
 					</ul>
+					<%}%>
 					</div>
 			</div>
 		</div>
