--- a/views/explore.ejs
+++ b/views/explore.ejs
@@ -1,19 +1,11 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel = "icon" type = "image/png" href = "../addmie/img/Addmie.png"> 
-    <link rel="stylesheet" type="text/css" href="addmie/css/styles.css">
-    <link rel="stylesheet" type="text/css" href="addmie/css/gaurav.css">
-    <title>Addmie</title>
-</head>
-<body>
-    <div id="wrapper" style="width:auto;">
+<%
+var explorepostslink='/'+username+'/explore/posts',
+explorefriendslink='/'+username+'/explore/friends';
+%>
+    <div class="explore-header" style="width:auto ;" id='wrapper'><!-- remove this id when styling is done -->
         <ul>
-            <li><a href="/explore/friends"><div style="font-size:18px;">friends</div></a></li>
-            <li><a href="/explore/posts"><div style="font-size:18px;">posts</div></a></li>
+            <li><a href=<%=explorefriendslink %>><div style="font-size:18px;">friends</div></a></li>
+            <li><a href=<%=explorepostslink %>><div style="font-size:18px;">posts</div></a></li>
         </ul>
     </div>    
-</body>
-</html>
+    
