--- a/views/friends.ejs
+++ b/views/friends.ejs
@@ -1,5 +1,5 @@
 <span>
-    <%var link = '/profile/'+friend; %>
+    <%var link = '/'+friend+'/profile'; %>
     <a href= <%=link%> </a>
         <%=friend%>
     </a>
