--- a/views/header.ejs
+++ b/views/header.ejs
@@ -25,7 +25,7 @@
 						<li><a href=<%=profilelink%>><div style="font-size:18px;">profile</div></a></li>
 						<li><a href=<%=messagelink%>><div style="font-size:18px;">messages</div></a></li>
 						<li><a href=<%=settingslink%>><div style="font-size:18px;">settings</div></a></li>
-						
+						<li><a href='/logout'><div style="font-size:18px;">logout</div></a></li>
 
 					</ul>
 					<%}%>
