--- a/addmie/css/styles.css
+++ b/addmie/css/styles.css
@@ -2,13 +2,53 @@
     font-family: Arial, Helvetica, sans-serif;
     padding: 0; 
     margin: 0;
-    
+    text-decoration: none;
     font-size: 12px;
     
 }
+
 body,html{
     height: 100%;
     width: 100%;
+}
+.button {
+    position: relative;
+    background-color: #4CAF50;
+    border: none;
+    font-size: 28px;
+    color: #FFFFFF;
+    padding: 20px;
+    width: 200px;
+    text-align: center;
+    -webkit-transition-duration: 0.4s; /* Safari */
+    transition-duration: 0.4s;
+    text-decoration: none;
+    overflow: hidden;
+    cursor: pointer;
+  }
+  
+  .button:after {
+    content: "";
+    background: rgba(69, 129, 241, 0.753);
+    display: block;
+    position: absolute;
+    padding-top: 300%;
+    padding-left: 350%;
+    margin-left: -20px!important;
+    margin-top: -120%;
+    opacity: 0;
+    transition: all 0.8s
+  }
+  
+  .button:active:after {
+    padding: 0;
+    margin: 0;
+    opacity: 1;
+    transition: 0s
+  }
+
+button::onclick{
+    border: none;
 }
 .headermenu{
     background-color: #00b9ed;
@@ -145,9 +185,15 @@ body,html{
     width: 150px;
     border-radius: 50%;
     margin: 15px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    overflow: hidden;
 }
+
 #username{
-    opacity: 0.45;
+    color: rgba(255,255,255,1);
+    background-color: rgba(255, 230, 5,0.3);
     text-align: center;
     padding: 2px;
 }
@@ -177,8 +223,44 @@ body > div.grid-container > div.grid-container-right > div.postform > form > inp
     font-weight: bold;
     height: 100%;
 }
-#friends-container{
-    background-color: black;
-    color: white;
 
+.post-container{
+    text-align: center;
+    overflow-y: scroll;
+}
+.post-container ul{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    
+}
+.my-posts-container{
+    background-color: ivory;
+    border: 1px solid black;
+    box-shadow: grey 2px 2px 2px 2px;
+    margin: 10px;
+    padding: 5px;
+}
+/* like and comment and share container down */
+.my-posts-container span{
+    display: flex;
+}
+.my-posts-container span div{
+    padding: 3px;
+}
+.friends-container a{
+    color: black;
+    text-decoration: none; 
+
+}
+.friends-container{
+    background-color: white;
+    text-align: left;
+    margin: 5px;
+    padding: 2px;
+    
+}
+.friends-container span{
+    display: flex;
 }
