--- a/views/Addmie.ejs
+++ b/views/Addmie.ejs
@@ -17,7 +17,7 @@
 				password<input type="text" name='Password' required/><br>
 				Firstname<input type="text" name='Fname' required/><br>
 				Lastname<input type="text" name='Lname' required/><br>
-				Date Of Birth<input type="text" name='DOB' required/><br>
+				Date Of Birth<br><input type="date" name='DOB' required/><br>
 				Email<input type="text" name='Email' required/><br>
                 <input type='submit' name='Submit'/>
             </form>
