--- a/views/header.ejs
+++ b/views/header.ejs
@@ -4,32 +4,34 @@
 	messagelink='/'+username+'/messages',
 	settingslink='/'+username+'/settings';
  %>
-<div class="headermenu">
-		<div id ='wrapper'>
-			<div class="logo">
-				<img src="../addmie/img/Addmie.png">
-			</div>
-			<div class="title"> Addmie</div>
-			<div class="search_box">
-				<form action="search.php" method="GET" id= "search">
-					<input type="text" name="q" size="60" placeholder="search"> 
-					<div id='search_font'><input type='button' name="search_submit" placeholder="search_submit"/></div>
-				</form>
-			</div>
-			<div>
-					<div id="wrapper" style="width:auto;">
-						<%if(username){%>
-					<ul>
-						<li><a href=<%=homelink%>><div style="font-size:18px;">feed</div></a></li>
-						<li><a href=<%=explorelink%>><div style="font-size:18px;">explore</div></a></li>
-						<li><a href=<%=profilelink%>><div style="font-size:18px;">profile</div></a></li>
-						<li><a href=<%=messagelink%>><div style="font-size:18px;">messages</div></a></li>
-						<li><a href=<%=settingslink%>><div style="font-size:18px;">settings</div></a></li>
-						<li><a href='/logout'><div style="font-size:18px;">logout</div></a></li>
+ <nav>
+	<div class="headermenu">
+			<div id ='wrapper'>
+				<div class="logo">
+					<img src="../addmie/img/Addmie.png">
+				</div>
+				<div class="title"> Addmie</div>
+				<div class="search_box">
+					<form action="search.php" method="GET" id= "search">
+						<input type="text" name="q" size="60" placeholder="search"> 
+						<div id='search_font'><input type='button' name="search_submit" placeholder="search_submit"/></div>
+					</form>
+				</div>
+				<div>
+						<div id="wrapper" style="width:auto;">
+							<%if(username){%>
+						<ul>
+							<li><a href=<%=homelink%>><div style="font-size:18px;">feed</div></a></li>
+							<li><a href=<%=explorelink%>><div style="font-size:18px;">explore</div></a></li>
+							<li><a href=<%=profilelink%>><div style="font-size:18px;">profile</div></a></li>
+							<li><a href=<%=messagelink%>><div style="font-size:18px;">messages</div></a></li>
+							<li><a href=<%=settingslink%>><div style="font-size:18px;">settings</div></a></li>
+							<li><a href='/logout'><div style="font-size:18px;">logout</div></a></li>
 
-					</ul>
-					<%}%>
-					</div>
+						</ul>
+						<%}%>
+						</div>
+				</div>
 			</div>
 		</div>
-	</div>
+</nav>
