--- a/views/accountheader.ejs
+++ b/views/accountheader.ejs
@@ -1,8 +1,10 @@
-<%var link = '/'+friend+'/profile'; %>
+
+<%var link = '/profile'+'/'+friend; %>
 <span>
     <div style="width: 100px;">
         <a href= <%=link%>>
             <%=friend%>
         </a>
     </div>
+
 </span>
