--- a/views/myprofile.ejs
+++ b/views/myprofile.ejs
@@ -31,14 +31,14 @@
             </div>
         </div>
         <div class="grid-container-right">
-            <!-- <div class="postform">
+            <div class="postform">
                 
                 
                 <form  method="POST" action=<%=postlink%> >
                     <input type='text' name='text' value='Write Something Here'/>
                     <input id='post' type='submit' name='post' value='Post'/>
                 </form>
-            </div> -->
+            </div>
             <div class="post-container">
                 <h1>your posts</h1>
                 <ul>
