--- a/views/postcontainer.ejs
+++ b/views/postcontainer.ejs
@@ -1,8 +1,8 @@
 <div class='my-posts-container'>
     <div class="my-posts-container-header">
-         <%-include('friends.ejs',{friend:postobj.username});%> 
+         <%-include('accountheader.ejs',{friend:postobj.username});%> 
     </div>
-    <div class="image">
+    <div class="post-image">
         <img src="../addmie/img/Addmie.png" alt="image" height="400px" width="auto" style="margin: 5px;">
     </div>
    
