i have added the message feature it is not live chat yet]

--- a/views/header.ejs
+++ b/views/header.ejs
@@ -1,7 +1,7 @@
 <%var profilelink = '/'+username+'/profile',
 	explorelink='/'+username+'/explore/friends',
 	homelink='/'+username+'/home',
-	messagelink='/'+username+'/messages',
+	messagelink='/'+username+'/direct',
 	settingslink='/'+username+'/settings';
  %>
  <nav>
