--- a/views/header.ejs
+++ b/views/header.ejs
@@ -5,6 +5,11 @@
 	settingslink='/'+username+'/settings';
  %>
  <nav>
+	<script src="https://kit.fontawesome.com/e4aaa47c6d.js" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+    <script src="../addmie/js/client.js"></script>
+    <script src="../addmie/js/frontend.js"></script> 
+	
 	<div class="headermenu">
 			<div id ='wrapper'>
 				<div class="logo">
