--- a/addmie/css/styles.css
+++ b/addmie/css/styles.css
@@ -288,3 +288,9 @@ body > div.grid-container > div.grid-container-right > div.postform > form > inp
     padding: 1px;
     border-radius: 7%;
 }
+.red{
+    color: red;
+}
+.gold{
+    color: gold;
+}
