--- a/views/mypostcontainer.ejs
+++ b/views/mypostcontainer.ejs
@@ -6,9 +6,8 @@
         <img src="../addmie/img/Addmie.png" alt="image" height="400px" width="auto" style="margin: 5px;">
     </div>
    
-    <span>
-        <div class="likes">likes:<%=postobj.likes%></div>
-        <div class="date">posted on:<%=postobj.creationdate%></div>
+    <span>       
+        <%-include('likecommentsharesave.ejs',{postid:postobj._id  })%>
     </span>
     <hr>
     <div class="caption"> 
