--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -39,7 +39,7 @@
                     <input id='post' type='submit' name='post' value='Post'/>
                 </form>
             </div> -->
-            <div class="post-container" style="height: 100%;">
+            <div class="post-container">
                 <h1>your posts</h1>
                 <ul>
                     <%for(i=0;i< postobj.length;i++){%>
