--- a/views/newmessagebox.ejs
+++ b/views/newmessagebox.ejs
@@ -14,7 +14,7 @@
         <div class="row">
             <div class="container">
                 <div class="right-section border container-fluid">
-                    <%-include('messagebox.ejs',{friend:'testuser',username:'nick'})%>
+                    <%-include('messagebox.ejs',{friend:friend,username:username})%>
                 </div>  
                 </div>
             </div>
