--- a/views/messages.ejs
+++ b/views/messages.ejs
@@ -1,4 +1,4 @@
-<h2 class="border">testuser</h2>
+<h2 class="border"><%=result.title%></h2>
 <section id="messages">
         <%for(i=0;i< result.messages.length;i++){
             if(result.messages[i].sender==username){%>
@@ -18,6 +18,6 @@
     <div class="form" >
         <textarea  type="text" placeholder="message" name='message' id="message"></textarea>
         <button type="submit" style="border: none; color: rgba(30, 70, 190, 0.7); padding: 2px;" 
-        name="sendmessage" placeholder="send" onclick="sendmessageagain('nick','testuser','<%=result._id%>')" >send</button>        
+        name="sendmessage" placeholder="send" onclick="sendmessageagain('<%=username%>','<%result.title%>','<%=result._id%>')" >send</button>        
     </div>
 </div>  
