--- a/views/messagebox.ejs
+++ b/views/messagebox.ejs
@@ -8,6 +8,6 @@
     <div class="form" >
         <textarea  type="text" placeholder="message" name='message' id="message"></textarea>
         <button type="submit" style="border: none; color: rgba(30, 70, 190, 0.7); padding: 2px;" 
-        name="sendmessage" placeholder="send" onclick="sendmessage('<%=username%>','<%=friend%>')" >send</button>        
+        name="sendmessage" placeholder="send" onclick="sendmessage('<%=username%>','<%=friend%>','<%secret%>')" >send</button>        
     </div>
 </div>  
