--- a/addmie/css/styles.css
+++ b/addmie/css/styles.css
@@ -294,3 +294,15 @@ body > div.grid-container > div.grid-container-right > div.postform > form > inp
 .gold{
     color: gold;
 }
+.likecommentsharesave{
+    width: 100%;
+    display: flex;
+    justify-content: space-around;
+}
+.likecommentsharesave button {
+    outline: none;
+    border: none;
+}
+.likecommentsharesave button i{
+    font-size: 1.5em;
+}
