--- a/views/myprofile.ejs
+++ b/views/myprofile.ejs
@@ -42,7 +42,7 @@
                 <h1>your posts</h1>
                 <ul>
                     <%for(i=0;i< postobj.length;i++){%>
-                        <li><%-include('mypostcontainer.ejs',{postobj:postobj[i]});%></li>
+                        <li><%-include('mypostcontainer.ejs',{postobj:postobj[i],username:userobj.username});%></li>
                     <%}%>
                 </ul>
                 
