--- a/addmie/css/styles.css
+++ b/addmie/css/styles.css
@@ -302,7 +302,14 @@ body > div.grid-container > div.grid-container-right > div.postform > form > inp
 .likecommentsharesave button {
     outline: none;
     border: none;
+    background-color: white;
 }
 .likecommentsharesave button i{
     font-size: 1.5em;
+}
+.likecommentsharesave .fas{
+    color:red
+}
+.likecommentsharesave  .far{
+    color: black;
 }
