--- a/addmie/css/styles.css
+++ b/addmie/css/styles.css
@@ -313,3 +313,21 @@ body > div.grid-container > div.grid-container-right > div.postform > form > inp
 .likecommentsharesave  .far{
     color: black;
 }
+.post_profile_picture{
+    background-color: whitesmoke;
+    margin: 5px;
+    border: 1px solid black;
+    height: 20px;
+    width: 20px;
+    border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    overflow: hidden;
+}
+.postheader{
+    margin: 5px;
+    display: flex;
+    align-items: center
+    
+}
