--- a/views/postcontainer.ejs
+++ b/views/postcontainer.ejs
@@ -1,6 +1,6 @@
 <div class='my-posts-container'>
     <div class="my-posts-container-header">
-         <%-include('accountheader.ejs',{friend:postobj.username});%> 
+         <%-include('postheader.ejs',{friend:postobj.username});%> 
     </div>
     <div class="post-image">
         <img src="../addmie/img/Addmie.png" alt="image" height="400px" width="auto" style="margin: 5px;">
