--- a/addmie/css/styles.css
+++ b/addmie/css/styles.css
@@ -250,6 +250,7 @@ body > div.grid-container > div.grid-container-right > div.postform > form > inp
     box-shadow: grey 2px 2px 2px 2px;
     margin: 10px;
     padding: 5px;
+    
 }
 /* like and comment and share container down */
 .my-posts-container span{
@@ -307,10 +308,10 @@ body > div.grid-container > div.grid-container-right > div.postform > form > inp
 .likecommentsharesave button i{
     font-size: 1.5em;
 }
-.likecommentsharesave .fas{
+.likecommentsharesave .like .fas{
     color:red
 }
-.likecommentsharesave  .far{
+.likecommentsharesave .like  .far{
     color: black;
 }
 .post_profile_picture{
@@ -326,8 +327,49 @@ body > div.grid-container > div.grid-container-right > div.postform > form > inp
     overflow: hidden;
 }
 .postheader{
-    margin: 5px;
+
     display: flex;
-    align-items: center
+    align-items: center   
+}
+.likes ,.likes div{
+    display: flex;
+    color: grey;
+    text-transform: capitalize;
+    font-size: 8px;
+    padding: 0px;
+}
+.postheader > div:nth-child(2) > a{
+    text-decoration: none;
+    color: black;
+    font-size: 2em;
+    font-weight: bold;
+    /* username of the post container */
     
+}
+.hide{
+    display: none;
+}
+.menu{
+    z-index: 1;
+    position:absolute;
+    margin-left: 135px;
+    margin-top: 75px;
+    height: fit-content;
+    width: fit-content;
+    background-color: white;
+    border-radius: 5px;
+   
+}
+.menu li a{
+    font-size: 32px;
+    text-decoration: none;
+    color: lightslategray;
+}
+.menu ul{
+    padding: 5px;
+}
+.menu li{
+    padding: 2px;
+    width: 100%;
+    border-bottom: 1px solid darkgray;
 }
