--- a/views/direct.ejs
+++ b/views/direct.ejs
@@ -10,8 +10,14 @@
         <div class="row">
             <div class="container">
                 <div class="left-section container-fluid border" id='inbox'>
-                    <h2 class="text-center border">direct</h2>
-
+                    <div style="display: flex;">
+                        <a  onclick="history.back()">
+                            <svg width="2em" height="2em" viewBox="0 0 16 16" class="bi bi-arrow-left-square-fill" fill="#00b9ed">
+                                <path fill-rule="evenodd" d="M2 0a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2H2zm6.354 10.646a.5.5 0 0 1-.708.708l-3-3a.5.5 0 0 1 0-.708l3-3a.5.5 0 1 1 .708.708L6.207 7.5H11a.5.5 0 0 1 0 1H6.207l2.147 2.146z"/>
+                            </svg>
+                        </a>
+                        <h2 class="text-center" style="display: flex;align-items: center;justify-content: center;width: 100%;">direct</h2>
+                    </div>
                         <div >
                             <ul>
                                 <% for(i=0;i< convobj.length;i++){%>
