--- a/views/postheader.ejs
+++ b/views/postheader.ejs
@@ -1,5 +1,7 @@
 <%var link = '/profile'+'/'+friend; %>
 
+
+
 <span class="postheader">
     <div class="post_profile_picture">
         <img src="../addmie/img/Addmie.png" alt="image" height="30px" width="30px" style="margin: 5px;">
@@ -10,7 +12,10 @@
             <%=friend%>
         </a>
     </div> 
-    <div>
-        
+    <div onclick="dot('<%=postid%>')">
+        <svg width="2em" height="2em" viewBox="0 0 16 16" class="bi bi-three-dots-vertical" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+            <path fill-rule="evenodd" d="M9.5 13a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0zm0-5a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0zm0-5a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0z"/>
+          </svg>
     </div>  
+    
 </span>
