--- a/addmie/css/styles.css
+++ b/addmie/css/styles.css
@@ -356,14 +356,17 @@ body > div.grid-container > div.grid-container-right > div.postform > form > inp
     margin-top: 75px;
     height: fit-content;
     width: fit-content;
-    background-color: white;
+    background-color: rgba(255, 255, 255, 0.644);
     border-radius: 5px;
-   
+    box-shadow: rgba(128, 128, 128, 0.363) 3px 3px;
 }
-.menu li a{
+.menu li button{
     font-size: 32px;
+    border: none;
+    outline: none;
     text-decoration: none;
-    color: lightslategray;
+    color: rgb(110, 110, 110);
+    background-color: transparent;
 }
 .menu ul{
     padding: 5px;
